--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <title>Raymond Xu</title>
 
-    <link href="css/mystylesheet.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 
 </head>
 
