--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="headercontainer">
       <div class="row">
         <div class="intro-text">
-          <span class="name">Raymond Xu</span>
+          <span class="title">Raymond Xu</span>
         </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
         </div>
         
         <div class="col">
-          <center><a href="#projects"><img class="btn-skills" src="images/programmingicon.png"></a></center>
+          <center><a href="projects.html"><img class="btn-skills" src="images/programmingicon.png"></a></center>
           <h2>Programmer</h2></br >
           <p>Proficient in Java.<br>Learning Python, HTML, and CSS.</p>
         </div>
@@ -66,25 +66,6 @@
       </div>
     </div>
   </div>
-    
-
-
-
-  <div class="projects"><a name="projects"></a>
-    <div class="row">
-        <h1>Projects</h1>
-          <div class="title">Grid Game</div>
-          <div class="desc">Created a fast-paced dodging game in Java using object-oriented grid manipulation.</div>
-          <center><img class="pic" src="images/gridgame.png"></center>
-          <div class="nextproject"></div>
-          <div class="title">Poker Utility</div>
-          <div class="desc">Wrote a text-based poker chip tracking program for Texas-Hold'em.</div>
-          <center><img class="pic" src="images/pokerutility.png"></center>
-          <div class="nextproject"></div>
-
-    </div>
-  </div>
-
 
 
 </body>
