--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,7 @@
     <meta name="description" content="Projects page">
     <title>Raymond Xu - Projects</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
 
 </head>
 
