js to top button added

--- a/projects.html
+++ b/projects.html
@@ -20,12 +20,13 @@
     <meta name="description" content="Projects page">
     <title>Raymond Xu - Projects</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+    <script src="js/core.js"></script>
 
 </head>
 
 
 <body id="page-top" class="index">
-
 
   <header>
     
@@ -42,6 +43,8 @@
   </header>
 
 
+<a href="#" class="scrollToTop"><img class="btn-nav-top" src="images/scrolltotop.png"></a>
+
 
   <div class="projects"><a name="projects"></a>
     <div class="row">
@@ -49,7 +52,7 @@
           <div class="firstproject"></div>
 
           <div class="title">Grid Game</div>
-          <div class="desc">Created a fast-paced dodging game in Java using object-oriented grid manipulation.</div>
+          <div class="desc">Created a fast-paced dodging game in Java using object-oriented</br> grid manipulation.</div>
           <center><img class="pic" src="images/gridgame.png"></center>
           <div class="nextproject"></div>
 
