--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
           <div class="nextproject"></div>
 
           <div class="title">Poker Utility</div>
-          <div class="desc">Wrote a text-based poker chip tracking program for Texas-Hold'em.</div>
+          <div class="desc">Wrote a text-based, poker chip tracking program for Texas-Hold'em.</div>
           <center><img class="pic" src="images/pokerutility.png"></center>
           <div class="nextproject"></div>
 
