--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
           <div class="firstproject"></div>
 
           <div class="title">Grid Game</div>
-          <div class="desc">Created a fast-paced dodging game in Java using object-oriented</br> grid manipulation.</div>
+          <div class="desc">Created a fast-paced dodging game in Java using object-oriented<br> grid manipulation.</div>
           <center><img class="pic" src="images/gridgame.png"></center>
           <div class="nextproject"></div>
 
