--- a/aboutme.html
+++ b/aboutme.html
@@ -17,8 +17,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="author" content="Raymond Xu">
-    <meta name="description" content="Projects page">
-    <title>Raymond Xu - Projects</title>
+    <meta name="description" content="About me page">
+    <title>Raymond Xu - About Me</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
     <script src="js/core.js"></script>
@@ -36,7 +36,7 @@
 
     <div class="headercontainer">
         <div class="intro-text">
-          <span class="title">Projects</span>
+          <span class="title">About Me</span>
         </div>
     </div>
 
@@ -46,23 +46,7 @@
 <a href="#" class="scrollToTop"><img class="btn-nav-top" src="images/scrolltotop.png"></a>
 
 
-  <div class="projects"><a name="projects"></a>
-    <div class="row">
 
-          <div class="firstproject"></div>
-
-          <div class="title">Grid Game</div>
-          <div class="desc">Created a fast-paced dodging game in Java using object-oriented<br> grid manipulation.</div>
-          <span class="fadingpic"><center><img class="pic" src="images/gridgame.png"></center></span>
-          <div class="nextproject"></div>
-
-          <div class="title">Poker Utility</div>
-          <div class="desc">Wrote a text-based, poker chip tracking program for Texas-Hold'em.</div>
-          <center><img class="pic" src="images/pokerutility.png"></center>
-          <div class="nextproject"></div>
-
-    </div>
-  </div>
 
 
 
