--- a/projects.html
+++ b/projects.html
@@ -53,13 +53,12 @@
 
           <div class="title">Grid Game</div>
           <div class="desc">Created a fast-paced dodging game in Java using object-oriented<br> grid manipulation.</div>
-          <span class="fadingpic"><center><img class="pic" src="images/gridgame.png"></center></span>
+          <center><img class="pic" onload="this.style.opacity='1';" src="images/gridgame.png"></center>
           <div class="nextproject"></div>
 
           <div class="title">Poker Utility</div>
           <div class="desc">Wrote a text-based, poker chip tracking program for Texas-Hold'em.</div>
-          <center><img class="pic" src="images/pokerutility.png"></center>
-          <div class="nextproject"></div>
+          <center><img class="pic" onload="this.style.opacity='1';" src="images/pokerutility.png"></center>
 
     </div>
   </div>
