--- a/projects.html
+++ b/projects.html
@@ -59,6 +59,7 @@
           <div class="title">Poker Utility</div>
           <div class="desc">Wrote a text-based, poker chip tracking program for Texas-Hold'em.</div>
           <center><img class="pic" onload="this.style.opacity='1';" src="images/pokerutility.png"></center>
+          <div class="nextproject"></div>
 
     </div>
   </div>
