--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="columnedcontainer">
         
         <div class="col">
-          <center><a href="aboutme.html"><img class="btn-skills" src="images/studenticon.png"></a></center>
+          <center><a href=""><img class="btn-skills" src="images/studenticon.png"></a></center>
           <h2>Student</h2><br>
           <p>I will be a freshman this fall at Columbia University.</p>
         </div>
@@ -56,7 +56,7 @@
         </div>
         
         <div class="col">
-          <center><a href="magic.html"><img class="btn-skills" src="images/magicianicon.png"></a></center>
+          <center><a href=""><img class="btn-skills" src="images/magicianicon.png"></a></center>
           <h2>Magician</h2><br>
           <p>Magic is a beautiful artform that nurtures my creativity and challenges my thinking.</p>
         </div>
