scroll anchor added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         
         <div class="col">
-          <center><a href="#"><img class="btn-skills" src="images/programmingicon.png"></a></center>
+          <center><a href="#projects"><img class="btn-skills" src="images/programmingicon.png"></a></center>
           <h2>Programmer</h2><br>
           <p>Proficient in Java.<br>Learning Python, HTML, and CSS.</p>
         </div>
@@ -78,7 +78,7 @@
 
 
 
-  <div class="projects"><a name="projects"></a>
+  <div class="projects"><a id="projects"></a>
 
     <div class="headercontainer">
       <h2>Projects</h2><hr>
