updated desc skls

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="col">
           <center><a href="#projects"><img class="btn-skills" src="images/programmingicon.png"></a></center>
           <h2>Programmer</h2><br>
-          <p>Proficient in Java.<br>Learning Python, HTML, and CSS.</p>
+          <p>Proficient in Java.<br>Learning Python, HTML, CSS, and Javascript.</p>
         </div>
         
         <div class="col">
