--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="col">
           <center><a href="#projects"><img class="btn-skills" src="images/programmingicon.png"></a></center>
           <h2>Programmer</h2><br>
-          <p>Proficient in Java.<br>Learning Python, HTML, CSS, and Javascript.</p>
+          <p>Proficient in Java.<br>Competent in HTML, CSS, and Javascript.<br>Learning Python.</p>
         </div>
         
         <div class="col">
