--- a/pinpoint/index.html
+++ b/pinpoint/index.html
@@ -4,12 +4,12 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta charset="utf-8">
-	<title>Pinpoint</title>
+	<title>pinpoint by Raymond Xu</title>
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAg4o4sd4NGWgrBFKmNTT90SYPfHl5KniI"></script>
 </head>
 
 <header>
@@ -48,7 +48,8 @@
 
 
 <!--
-	-improve optimization calculation to compare distances from each origin to a destination and pick the one that has the smallest differences
+	-improve optimization calculation to compare distances from each origin to the centroid which is calculated by averaging all origin coordinates
+	-finish js documentation
 
 	-get footer spacing working
 	-vertical center "+ buttons"
@@ -75,7 +76,6 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 <script src="js/angular.js"></script>
 <script src="js/pinpointapp.js"></script>
-
 
 
 
