--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
 
           <div class="firstproject"></div>
 
+          <div class="title">pinpoint</div>
+          <div class="desc">Built a practical, clean web app that calculates the optimal location for a meetup given a set of starting addresses and destinations.</div>
+          <div class="aside">Click on picture to visit live app</div>
+          <center><a href="pinpoint/index.html"><img class="resizedpic" onload="this.style.opacity='1';" src="images/pinpoint.png"></a></center>
+          <div class="nextproject"></div>
+
           <div class="title">Grid Game</div>
           <div class="desc">Created a fast-paced dodging game in Java using object-oriented<br> grid manipulation.</div>
           <center><img class="pic" onload="this.style.opacity='1';" src="images/gridgame.png"></center>
