--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="col">
           <center><a href="#projects"><img class="btn-skills" src="images/programmingicon.png"></a></center>
           <h2>Programmer</h2><br>
-          <p>Proficient in Java.<br>Competent in HTML, CSS, and Javascript.<br>Learning Python.</p>
+          <p>Proficient in Java.<br>Competent in HTML, CSS, Javascript Python.</p>
         </div>
         
         <div class="col">
@@ -87,17 +87,17 @@
 
           <div class="firstproject"></div>
 
-          <div class="titlecontainer"><div class="title">pinpoint</div></div>
+          <div class="titlecontainer title">pinpoint</div>
           <div class="desc">Built a fast and practical web app that calculates the optimal location for a meetup given a set of starting addresses and destinations.</div>
           <center><a href="pinpoint/index.html"><img class="pinpointpic" onload="this.style.opacity='1';" src="images/pinpoint.png"></a></center>
           <div class="nextproject"></div>
 
-          <div class="titlecontainer"><div class="title">Grid Game</div></div>
+          <div class="titlecontainer title">Grid Game</div>
           <div class="desc">Created a fast-paced dodging game in Java using object-oriented grid manipulation.</div>
           <center><img class="pic" onload="this.style.opacity='1';" src="images/gridgame.png"></center>
           <div class="nextproject"></div>
 
-          <div class="titlecontainer"><div class="title">Poker Utility</div></div>
+          <div class="titlecontainer title">Poker Utility</div>
           <div class="desc">Wrote a text-based, poker chip tracking program for Texas-Hold'em.<br>Play cards with your friends anywhere and anytime without having to carry chips around!</div>
           <center><img class="pic" onload="this.style.opacity='1';" src="images/pokerutility.png"></center>
           <div class="nextproject"></div>
