--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="col">
           <center><a href="#projects"><img class="btn-skills" src="images/programmingicon.png"></a></center>
           <h2>Programmer</h2><br>
-          <p>Proficient in Java.<br>Competent in HTML, CSS, Javascript Python.</p>
+          <p>Proficient in Java.<br>Competent in HTML, CSS, and Javascript.</p>
         </div>
         
         <div class="col">
@@ -104,6 +104,20 @@
 
     </div>
     
+  </div>
+
+
+
+  <div class="knowledge"><a id="knowledge"></a>
+
+    <div class="row">
+
+      <div class="title">Skills</div>
+
+
+
+    </div>
+
   </div>
 
 
