--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
   ga('create', 'UA-52348587-1', 'auto');
   ga('send', 'pageview');
 
@@ -63,7 +62,6 @@
         </div>
         
         <div class="clear"></div>
-
       </div>
     </div>
   </div>
@@ -98,7 +96,7 @@
           <div class="nextproject"></div>
 
           <div class="title">Poker Utility</div>
-          <div class="desc">Wrote a text-based, poker chip tracking program for Texas-Hold'em.<br>Play cards with your friends anywhere and anytime without having to carry chips around!</div>
+          <div class="desc">Wrote a text-based, poker chip tracking program for Texas-Hold'em.<br>Now you can play cards with your friends anywhere and anytime without having to carry chips around!</div>
           <center><img class="pic" onload="this.style.opacity='1';" src="images/pokerutility.png"></center>
           <div class="nextproject"></div>
 
