spacing and skills

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 
 
 
-
 <body id="page-top" class="index">
 
 
@@ -88,11 +87,6 @@
 
 
 
-
-
-
-
-
   <div class="projects"><a id="projects"></a>
 
     <div class="headercontainer">
@@ -124,16 +118,15 @@
 
 
 
-
-<ul id="skill"><a id="skills"></a>
-  <li><span class="bar java"></span><span class="name">Java</span></li>
-  <li><span class="bar html"></span><span class="name">HTML</span></li>
-  <li><span class="bar css"></span><span class="name">CSS</span></li>
-  <li><span class="bar javascript"></span><span class="name">Javascript</span></li>
-</ul>
-
-
-
+<div class="row">
+  <div class="skillstitle">Skills<hr></div>
+  <ul id="skill"><a id="skills"></a>
+    <li><span class="bar java"></span><span class="name">Java</span></li>
+    <li><span class="bar html"></span><span class="name">HTML</span></li>
+    <li><span class="bar css"></span><span class="name">CSS</span></li>
+    <li><span class="bar javascript"></span><span class="name">Javascript</span></li>
+  </ul>
+</div>
 
 
 
