--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <div id="nav-wrapper">
         <ul>
             <li><a href="#page-top">Home</a></li>
-            <li><a href="#projects">About</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#skills">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
 </div>
@@ -81,7 +81,9 @@
   </div>
 
 
-
+  <div class="about"><a id="about"></a>
+    <div class="school">Studying at<br>Columbia University</div>
+  </div>
 
 
   <div class="projects"><a id="projects"></a>
