--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
   ga('create', 'UA-52348587-1', 'auto');
   ga('send', 'pageview');
 
@@ -19,26 +20,10 @@
     <meta name="description" content="My personal website">
     <title>Raymond Xu</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/animate.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 
 </head>
-
-
-
-
-<div id="nav">
-    <div id="nav-wrapper">
-        <ul>
-            <li><a href="#page-top">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </div>
-</div>
-
-
 
 
 <body id="page-top" class="index">
@@ -48,7 +33,7 @@
     <div class="headercontainer">
       <div class="row">
         <div class="intro-text">
-          <span class="title">Raymond Xu</span>
+          Raymond Xu
         </div>
       </div>
     </div>
@@ -79,6 +64,7 @@
       </div>
     </div>
   </div>
+
 
 <!--
   <div class="about"><a id="about"></a>
@@ -115,17 +101,6 @@
     
   </div>
 
-
-
-<div class="row">
-  <div class="skillstitle">Skills<hr></div>
-  <ul id="skill"><a id="skills"></a>
-    <li><span class="bar java"></span><span class="name">Java</span></li>
-    <li><span class="bar html"></span><span class="name">HTML</span></li>
-    <li><span class="bar css"></span><span class="name">CSS</span></li>
-    <li><span class="bar javascript"></span><span class="name">Javascript</span></li>
-  </ul>
-</div>
 
 
 
