--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <meta name="description" content="My personal website">
     <title>Raymond Xu</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="css/animate.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 
 </head>
@@ -33,7 +32,7 @@
     <div class="headercontainer">
       <div class="row">
         <div class="intro-text">
-          Raymond Xu
+          <div class="title">Raymond Xu</div>
         </div>
       </div>
     </div>
