poker desc reversion

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="nextproject"></div>
 
           <div class="title">Poker Utility</div>
-          <div class="desc">Wrote a text-based, poker chip tracking program for Texas-Hold'em.<br>Now you can play cards with your friends anywhere and anytime without having to carry chips around!</div>
+          <div class="desc">Wrote a text-based, poker chip tracking program for Texas-Hold'em.</div>
           <center><img class="pic" onload="this.style.opacity='1';" src="images/pokerutility.png"></center>
           <div class="nextproject"></div>
 
