--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 
 
   <div class="about"><a id="about"></a>
-    <div class="school">Studying at<br>Columbia University</div>
+    <center><div class="school">Studying at<br>Columbia University</div></center>
   </div>
 
 
   <div class="projects"><a id="projects"></a>
 
     <div class="headercontainer">
-      <h2>PROJECTS</h2><hr>
+      <h2>Projects</h2><hr>
     </div>
 
     <div class="row">
