added contact section

--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
   </div>
 
 
+  <div class="contact"><a id="contact>"</a>
+    <div class="container">
+    <a href="mailto:raymondxumail@gmail.com?Subject=Hello" target="_top"><center>Contact Me</center></a>
+  </div>
+  </div>
+
 </body>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
