--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
   </div>
   </div>
 
+
+  <div class="footer"><a id="footer"></a>
+    <div class="copyright">
+      <center>&copy; 2014 Raymond Xu</center>
+    </div>
+  </div>
+
 </body>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
