medium section added

--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
   </div>
 
 
+  <div class="medium"><a id="medium"></a>
+    <div class="desc"><center>Read my personal blog</center></div>
+    <center><script async src="https://static.medium.com/embed.js"></script><a class="m-profile" href="https://medium.com/@raymondxu">Raymond Xu</a></center>
+  </div>
+
+
   <div class="contact"><a id="contact>"</a>
     <div class="container">
     <a href="mailto:raymondxumail@gmail.com?Subject=Hello" target="_top"><center>Contact Me</center></a>
