--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 
 
   <div class="about"><a id="about"></a>
-    <center><div class="school">Studying at<br>Columbia University</div></center>
   </div>
 
 
@@ -103,8 +102,8 @@
 
 
   <div class="medium"><a id="medium"></a>
-    <div class="desc"><center>Read my personal blog</center></div>
-    <center><script async src="https://static.medium.com/embed.js"></script><a class="m-profile" href="https://medium.com/@raymondxu">Raymond Xu</a></center>
+    <div class="desc"><center>My personal blog</center></div>
+    <center><script async src="https://static.medium.com/embed.js"></script><a class="m-profile" data-width="100%" data-border="false" href="https://medium.com/@raymondxu">Raymond Xu</a></center>
   </div>
 
 
