--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div class="projects"><a id="projects"></a>
 
     <div class="headercontainer">
-      <h2>Projects</h2><hr>
+      <h2>PROJECTS</h2><hr>
     </div>
 
     <div class="row">
@@ -102,7 +102,7 @@
 
 
   <div class="medium"><a id="medium"></a>
-    <div class="desc"><center>My personal blog</center></div>
+    <div class="desc"><center></center></div>
     <center><script async src="https://static.medium.com/embed.js"></script><a class="m-profile" data-width="100%" data-border="false" href="https://medium.com/@raymondxu">Raymond Xu</a></center>
   </div>
 
