--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <title>Raymond Xu</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/animate.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -69,7 +71,7 @@
   <div class="projects"><a id="projects"></a>
 
     <div class="headercontainer">
-      <h2>PROJECTS</h2><hr>
+      <div class="header">Projects</div><hr>
     </div>
 
     <div class="row">
