massive nav overhaul

--- a/magician.html
+++ b/magician.html
@@ -21,8 +21,6 @@
     <title>Raymond Xu</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/animate.css" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -30,9 +28,10 @@
 <body id="page-top" class="index">
 
   <header>
-    <div class="indexheadercontainer">
+    <div class="headercontainer">
       <div class="row">
-        <a href="index.html"><div class="animated fadeInUp title">Raymond Xu</div></a>
+        <a href="index.html"><div class="title">Raymond Xu</div></a>
+        <div class="animated fadeInUp sectiontext">Magician</div>
       </div>
     </div>
   </header>
@@ -53,12 +52,17 @@
         </div>
         
         <div class="col">
-          <a href="magician.html"><center><img class="btn-trifold" src="images/magicianicon.png"></center></a>
+          <a href="magician.html"><center><img class="btn-trifold-active" src="images/magicianicon.png"></center></a>
           <h2>Magician</h2>
         </div>
         
       </div>
     </div>
+  </div>
+
+
+  <div class="black"><a id="magic"></a></div>
+  <div class="magic">
   </div>
 
 
