media buttons added

--- a/index.html
+++ b/index.html
@@ -64,12 +64,18 @@
 
   <div class="contact"><a id="contact>"</a>
     <div class="container">
-    <a href="mailto:raymondxumail@gmail.com?Subject=Hello" target="_top"><center>Contact Me</center></a>
+      <center>
+        <a href="mailto:raymondxumail@gmail.com?Subject=Hello" target="_top"><img class="mediabutton" src="images/mail.png"></a>
+        <a href="https://www.facebook.com/RayXu" target="_blank"><img class="mediabutton" src="images/facebook.png"></a>
+        <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><img class="mediabutton" src="images/linkedin.png"></a>
+      </center>
+    </div>
   </div>
-  </div>
+
 
 
   <div class="footer"><a id="footer"></a>
+    <hr>
     <div class="copyright">
       <center>&copy; 2014 Raymond Xu</center>
     </div>
