--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
 
 
-  <div class="contact"><a id="contact>"</a>
+  <div class="contact"><a id="contact"></a>
     <div class="container">
       <center>
         <a href="mailto:raymondxumail@gmail.com?Subject=Hello" target="_top"><img class="mediabutton" src="images/mail.png"></a>
