instructions screen and ux improvements

--- a/arrows/index.html
+++ b/arrows/index.html
@@ -3,16 +3,21 @@
 
 
 
-<div id="timerDiv"></div>
+<div class="instructions">
+	how to play
+	<hr>
+	if the arrow is green, press the same key
+	<br><img class="icon" src="images/arrow1.png">
+	<img class="icon" src="images/redarrow1.png"><br>
+	if the arrow is red, press the opposite key
+</div>
 
-<center><img id="image" src="images/arrow1.png"></center>
 
-<div id="outputDiv"></div>
-
-
-
+<div class="container">
+	<a href="game.html" class="button">play</a>
+</div>
 
 
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
 <script src="game.js"></script>
