--- a/arrows/game.html
+++ b/arrows/game.html
@@ -2,10 +2,9 @@
 
 
 
-
 <div id="timerDiv"></div>
 
-<center><img id="image" src="images/arrow1.png"></center>
+<center><img id="image" src=""></center>
 
 <div id="scoreDiv"></div>
 
