functional nav tab

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="columnedcontainer">
         
         <div class="col">
-          <center><img class="btn-trifold studentbutton" src="images/studenticon.png"></center>
+          <center><img class="btn-trifold studentbutton" src="images/programmingicon.png"></center>
           <h2>Student</h2>
         </div>
         
@@ -87,7 +87,7 @@
   
             <div class="title">pinpoint</div>
             <div class="desc">Built a fast and practical web app that calculates the optimal location for a meetup given a setof    starting addresses and destinations.</div>
-            <center><a href="pinpoint/index.html"><img class="pinpointpic" onload="this.style.opacity='1';" src="images/pinpoint.pn"  </  a></center>
+            <center><a href="pinpoint/index.html"><img class="pinpointpic" onload="this.style.opacity='1';" src="images/pinpoint.png"></a></center>
             <div class="nextproject"></div>
   
             <div class="title">Grid Game</div>
