--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="indexheadercontainer">
       <div class="row">
         <a href="index.html"><div class="animated fadeInUp title">Raymond Xu</div></a>
+        <div class="animated fadeInUp sectiontext"><br></div>
       </div>
     </div>
   </header>
