--- a/pinpoint/index.html
+++ b/pinpoint/index.html
@@ -17,7 +17,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoYImSWbkUDiiybqw1A4L3kdeQ8PRAooI"></script>
+	<script src="https://maps.googleapis.com///maps.googleapis.com/maps/api/js?sensor=true"></script>
 </head>
 
 <header>
