trifold button fix

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="columnedcontainer">
         
         <div class="col">
-          <img class="trifoldbutton studentbutton" src="images/programmingicon.png">
+          <img class="trifoldbutton studentbutton" src="images/studenticon.png">
           <h2>Student</h2>
         </div>
         
