--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   
             <div class="title">pinpoint</div>
             <div class="desc">Built a fast and practical web app that calculates the optimal location for a meetup given a set of starting addresses and destinations.</div>
-            <a href="pinpoint/index.html"><img class="pinpointpic" onload="this.style.opacity='1';" src="images/pinpoint.png"></a>
+            <img class="pinpointpic" onload="this.style.opacity='1';" src="images/pinpoint.png">
             <div class="nextproject"></div>
   
             <div class="title">Grid Game</div>
