added arrows project

--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
             <img class="pinpointpic" onload="this.style.opacity='1';" src="images/pinpoint.png">
             <div class="nextproject"></div>
   
-            <div class="title">Grid Game</div>
-            <div class="desc">Created a fast-paced dodging game in Java using object-oriented grid manipulation.</div>
-            <img class="pic" onload="this.style.opacity='1';" src="images/gridgame.png">
+            <div class="title">Arrows</div>
+            <div class="desc">Implemented a minimalistic concentration game using Javascript.</div>
+            <a href="arrows/index.html"><img class="pic" onload="this.style.opacity='1';" src="images/arrows.png"></a>
             <div class="nextproject"></div>
-  
+
             <div class="title">Poker Utility</div>
             <div class="desc">Wrote a text-based, poker chip tracking program for Texas-Hold'em.</div>
             <img class="pic" onload="this.style.opacity='1';" src="images/pokerutility.png">
             <div class="nextproject"></div>
-    
+
         </div>
       
     </div> <!--End of projects-->
