--- a/arrows/game.html
+++ b/arrows/game.html
@@ -9,7 +9,7 @@
 <div id="scoreDiv"></div>
 
 <div class="container">
-	<a href="game.html" class="button">restart</a>
+	<a href="game.html" class="button">RESTART</a>
 </div>
 
 
