--- a/arrows/index.html
+++ b/arrows/index.html
@@ -14,7 +14,7 @@
 
 
 <div class="container">
-	<a href="game.html" class="button">play</a>
+	<a href="game.html" class="button">PLAY</a>
 </div>
 
 
