--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
 
   <div class="row">
     <div class="arrows">
+      <div class="cloud x1"></div>
+      <div class="cloudarrow"></div>
       <div class="arrowstitle">Arrows</div>
-      <a href="arrows/index.html"><div class="arrowsbutton">PLAY</div></a>
+      <a href="arrows/index.html" class="arrowsbutton">PLAY</a>
     </div>
   </div>
   
