arrows css trim

--- a/arrows/index.html
+++ b/arrows/index.html
@@ -4,12 +4,13 @@
 
 
 <div class="instructions">
-	how to play
+	HOW TO PLAY
 	<hr>
-	if the arrow is green, press the same key
+	<br>
+	IF THE ARROW IS GREEN, PRESS THE SAME KEY
 	<br><img class="icon" src="images/arrow1.png">
 	<img class="icon" src="images/redarrow1.png"><br>
-	if the arrow is red, press the opposite key
+	IF THE ARROW IS RED, PRESS THE OPPOSITE KEY
 </div>
 
 
