banner css foundation implemented

--- a/index.html
+++ b/index.html
@@ -68,11 +68,14 @@
 
 
   <div class="row">
-    <div class="arrows">
-      <div class="cloud x1"></div>
-      <div class="cloudarrow"></div>
-      <div class="arrowstitle">Arrows</div>
-      <a href="arrows/index.html" class="arrowsbutton">PLAY</a>
+    <div class="banner arrows">
+      <div class="bannertitle">Arrows</div>
+      <a href="arrows/index.html" class="bannerbutton arrowsbutton">PLAY</a>
+    </div>
+
+    <div class="banner pinpoint">
+      <div class="bannertitle">Pinpoint</div>
+      <a href="pinpoint/index.html" class="bannerbutton pinpointbutton">LAUNCH</a>
     </div>
   </div>
   
