--- a/pinpoint/index.html
+++ b/pinpoint/index.html
@@ -2,14 +2,6 @@
 <html ng-app="ngAddApp" lang="en">
 
 <head>
-	<script>
-  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  	ga('create', 'UA-52348587-1', 'auto');
-  	ga('send', 'pageview');
-	</script>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta charset="utf-8">
 	<title>pinpoint by Raymond Xu</title>
@@ -81,7 +73,7 @@
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-<script src="js/angular.js"></script>
+<script src="js/angular.min.js"></script>
 <script src="js/pinpointapp.js"></script>
 
 
