medium banner added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
 
   <div class="row">
+
     <div class="banner arrows">
       <div class="bannertitle">Arrows</div>
       <a href="arrows/index.html" class="bannerbutton arrowsbutton">PLAY</a>
@@ -77,6 +78,12 @@
       <div class="bannertitle">Pinpoint</div>
       <a href="pinpoint/index.html" class="bannerbutton pinpointbutton">LAUNCH</a>
     </div>
+
+    <div class="banner medium">
+      <div class="bannertitle">My Blog</div>
+      <a href="https://medium.com/@raymondxu" class="bannerbutton mediumbutton">READ</a>
+    </div>
+
   </div>
   
   
