parallax landing page added

--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
 
 <body id="page-top" class="index">
 
-  <header>
-    <div class="indexheadercontainer">
-      <div class="row">
-        <a href="index.html"><div class="animated fadeInUp title">Raymond Xu</div></a>
-        <div class="animated fadeInUp sectiontext"><br></div>
-      </div>
-    </div>
-  </header>
+
+
+<div id="bg" class="slide">
+  <div class="title">
+      <a href="index.html"><div class="animated fadeInUp title">Raymond Xu</div></a>
+      <div class="animated fadeInUp sectiontext"><br></div>
+  </div>
+</div>
+
 
 
   <div class="trifold">
@@ -64,9 +65,6 @@
   </div>
 
 
-  <div class="about"><a id="about"></a></div>
-
-
   <div class="row">
 
     <div class="banner arrows">
@@ -86,14 +84,6 @@
 
   </div>
   
-  
-  
-  <!--<div id="magiciancontainer">
-      <div class="black"><a id="magic"></a></div>
-      <div class="magic"></div>
-  </div> <!--End of magician container-->
-
-
 
 
   <div class="contact"><a id="contact"></a>
