landing page revamp 2

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/animate.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -64,11 +65,15 @@
   </div>
 
 
-<div id="columbia" class="slide smallslide">
-  <div class="title">
-      <a href="index.html">Studying at Columbia University</a>
+
+
+  <div id="columbia" class="slide smallslide">
+    <div class="title">
+        <a href="index.html">Studying at Columbia University</a>
+    </div>
   </div>
-</div>
+
+
 
 
 
@@ -82,10 +87,6 @@
      <a href="pinpoint/index.html" class="bannerbutton pinpointbutton">LAUNCH</a>
    </div>
 
-   <div class="banner medium">
-     <div class="bannertitle">My Blog</div>
-     <a href="https://medium.com/@raymondxu" class="bannerbutton mediumbutton">READ</a>
-   </div>
 
   
 
