replaced arr with nytimes

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
 
   <div class="banner arrows">
-    <div class="bannertitle">Arrows</div>
-    <a href="arrows/index.html" class="bannerbutton arrowsbutton">PLAY</a>
+    <div class="bannertitle">NYTimes Decades Challenge</div>
+    <a href="nytimes/index.html" class="bannerbutton arrowsbutton">PLAY</a>
   </div>
 
    <div class="banner pinpoint">
