--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col">
           <img class="trifoldbutton studentbutton" src="images/studenticon.png">
           <h2>Student</h2>
-          <p>Prospective Computer Science Major</p>
+          <p>Computer Science Major</p>
         </div>
         
         <div class="col">
