--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col">
           <img class="trifoldbutton studentbutton" src="images/studenticon.png">
           <h2>Student</h2>
-          <p>Computer Science Major</p>
+          <p>Computer Science Major at Columbia University</p>
         </div>
         
         <div class="col">
@@ -58,7 +58,7 @@
         <div class="col">
           <img class="trifoldbutton magicianbutton" src="images/magicianicon.png">
           <h2>Magician</h2>
-          <p>"There's nothing really as precious in the world as pure wonder."</p>
+          <p>Sleight of hand hobbyist.</p>
         </div>
         
     </div>
