--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="col">
           <img class="trifoldbutton magicianbutton" src="images/magicianicon.png">
           <h2>Magician</h2>
-          <p>Sleight of hand hobbyist.</p>
+          <p>Sleight of hand artist.</p>
         </div>
         
     </div>
