Add Github Banner

--- a/index.html
+++ b/index.html
@@ -75,20 +75,23 @@
 
 
 
-
-
   <div class="banner arrows">
     <div class="bannertitle">NYTimes Decades Challenge</div>
     <a href="nytimes/index.html" class="bannerbutton arrowsbutton">PLAY</a>
   </div>
 
-   <div class="banner pinpoint">
-     <div class="bannertitle">Pinpoint</div>
-     <a href="pinpoint/index.html" class="bannerbutton pinpointbutton">LAUNCH</a>
-   </div>
+  <div class="banner pinpoint">
+    <div class="bannertitle">Pinpoint</div>
+    <a href="pinpoint/index.html" class="bannerbutton pinpointbutton">LAUNCH</a>
+  </div>
 
 
-  
+
+  <a href="https://www.github.com/raymondxu"><div id="githubbanner" class="slide tinyslide">
+    <img class="githubbutton" src="images/github.png">
+  </div></a>
+
+
 
 
   <div class="contact"><a id="contact"></a>
