Implement Vertical + Horizontal Centering

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
   <a href="https://www.github.com/raymondxu"><div id="githubbanner" class="slide tinyslide">
-    <img class="githubbutton" src="images/github.png">
+    <img id="githubbutton" src="images/github.png">
   </div></a>
 
 
