[NYTimes] Add landing page and instructions

--- a/nytimes/game.html
+++ b/nytimes/game.html
@@ -18,13 +18,16 @@
 	</div>
 	<hr>
 	<div class="container">
-		<div id="instructions">
-			Guess the publication date of the New York Times articles!
-		</div>
+		<div id="snippetDiv"></div>
 	</div>
 	<hr>
 	<div class="container">
-		<button onclick="window.location='game.html';" id="start" class="pure-button">PLAY</button>
+		<button id="choice1" class="pure-button btn"></button>
+		<button id="choice2" class="pure-button btn"></button>
+		<button id="choice3" class="pure-button btn"></button>
+		<button id="choice4" class="pure-button btn"></button>
+		<div id="result"></div>
+		<button id="again" class="pure-button">PLAY AGAIN?</button>
 	</div>
 
 </body>
