--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 
 
 
-  <div class="banner arrows">
+  <div class="banner nytimes">
     <div class="bannertitle">NYTimes Decades Challenge</div>
-    <a href="nytimes/index.html" class="bannerbutton arrowsbutton">PLAY</a>
+    <a href="nytimes/index.html" class="bannerbutton nytimesbutton">PLAY</a>
   </div>
 
-  <div class="banner pinpoint">
-    <div class="bannertitle">Pinpoint</div>
-    <a href="pinpoint/index.html" class="bannerbutton pinpointbutton">LAUNCH</a>
+  <div class="banner arrows">
+    <div class="bannertitle">Arrows</div>
+    <a href="arrows/index.html" class="bannerbutton arrowsbutton">PLAY</a>
   </div>
 
 
