--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
 
 
-<div id="bg" class="slide">
-  <div class="title">
-      <div class="animated fadeInUp title">Raymond Xu</div>
+  <div id="bg" class="slide">
+    <div class="title">
+        <div class="animated fadeInUp title">Raymond Xu</div>
+    </div>
   </div>
-</div>
 
 
 
@@ -46,7 +46,7 @@
         <div class="col">
           <img class="trifoldbutton studentbutton" src="images/studenticon.png">
           <h2>Student</h2>
-          <p>Computer Science Major at Columbia University</p>
+          <p>Computer Science Major at Columbia University.</p>
         </div>
         
         <div class="col">
@@ -63,7 +63,6 @@
         
     </div>
   </div>
-
 
 
 
@@ -90,7 +89,6 @@
   <a href="https://www.github.com/raymondxu"><div id="githubbanner" class="slide tinyslide">
     <img id="githubbutton" src="images/github.png">
   </div></a>
-
 
 
 
