Happy New Year's- Update Copyright

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <div class="footer"><a id="footer"></a>
     <hr>
     <div class="copyright">
-      &copy; 2014 Raymond Xu
+      &copy; 2014-<script>document.write(new Date().getFullYear());</script> Raymond Xu
     </div>
   </div>
 
