--- a/snake/index.html
+++ b/snake/index.html
@@ -1,4 +1,30 @@
-<canvas id="canvas" width="600" height="600"></canvas>
+<!DOCTYPE html>
+<html lang="en">
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-<script src="core.js"></script>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+    <title>Battle Snake</title>
+</head>
+
+<body>
+
+<div class="logo">BATTLE SNAKE</div>
+
+<div class="container">
+	<canvas id="canvas" width="600" height="600"></canvas>
+</div>
+
+<div class="container">
+	<button id="play" class="pure-button pure-button-primary button-xlarge" onclick="init();">PLAY</button>
+</div>
+
+</body>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+    <script src="core.js"></script>
+
+</html>
