Add pause functionality, improved styling

--- a/snake/index.html
+++ b/snake/index.html
@@ -12,14 +12,14 @@
 
 <body>
 
-<div class="logo">BATTLE SNAKE</div>
-
 <div class="container">
+	<div class="col left" id="red">0</div>
 	<canvas id="canvas" width="600" height="600"></canvas>
+	<div class="col right" id="blue">0</div>
 </div>
 
 <div class="container">
-	<button id="play" class="pure-button pure-button-primary button-xlarge" onclick="init();">PLAY</button>
+	<button id="play" class="pure-button pure-button-primary button-xlarge btn" onclick="init();">PLAY</button>
 </div>
 
 </body>
