Add snake banner

--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
     <a href="nytimes/index.html" class="bannerbutton nytimesbutton">PLAY</a>
   </div>
 
+  <div class="banner snake">
+    <div class="bannertitle">Battle Snake</div>
+    <a href="snake/index.html" class="bannerbutton snakebutton">PLAY</a>
+  </div>
+
   <div class="banner arrows">
     <div class="bannertitle">Arrows</div>
     <a href="arrows/index.html" class="bannerbutton arrowsbutton">PLAY</a>
