--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="col">
           <img class="trifoldbutton programmerbutton" src="images/programmingicon.png">
           <h2>Developer</h2>
-          <p>I love building cool things and learning new technologies.</p>
+          <p>Builder of cool things and learner of new technologies.</p>
         </div>
         
         <div class="col">
