--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <div id="columbia" class="slide smallslide">
     <div class="title">
-        <a href="index.html">Studying at Columbia University</a>
+        Studying at Columbia University
     </div>
   </div>
 
