--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="tabcontainer">
 
       <div id="aboutdiv" class="tab">
-        Hi! My name is Raymond Xu, and I study Computer Science at Columbia University. In my free time, I love building cool apps, learning new technologies, practicing sleight of hand, and contemplating the world. This summer I'll be working at PayPal as a software engineering intern. Feel free to contact me!
+        Hi! My name is Raymond Xu, and I study Computer Science at Columbia University. In my free time, I love building cool apps, learning new technologies, and practicing sleight of hand. This summer I'll be working at PayPal as a software engineering intern. Feel free to contact me!
       </div>
 
       <div id="projectsdiv" class="tab">
