--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="tabcontainer">
 
       <div id="aboutdiv" class="tab">
-        Hi! My name is Raymond Xu, and I study Computer Science at Columbia University. In my free time, I love building cool apps, learning new technologies, and practicing sleight of hand. This summer I'll be working at PayPal as a software engineering intern. Feel free to contact me!
+        Hi! My name is Raymond Xu, and I study Computer Science at Columbia University. In my free time, I love building cool apps, learning new technologies, and practicing sleight of hand. This summer I'll be working at PayPal as a software engineering intern. Feel free to reach out to me!
       </div>
 
       <div id="projectsdiv" class="tab">
@@ -36,11 +36,17 @@
 
       <div id="contactdiv" class="tab">
         <div class="contact">
+          <div class="github">
+            <a href="https://www.github.com/raymondxu" target="_blank"><img id="githubbutton" src="images/githubdark.png"></a>
+          </div>
+          <div>
           <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><img class="mediabutton" src="images/mail.png"></a>
           <a href="https://www.facebook.com/RayXu" target="_blank"><img class="mediabutton" src="images/facebook.png"></a>
           <a href="https://www.linkedin.com/pub/raymond-xu/65/303/b58" target="_blank"><img class="mediabutton" src="images/linkedin.png"></a>
+          </div>
         </div>
       </div>
+
     </div>
 
   </div>
