--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </div>
 
     <div class="tabcontainer">
+      <div class="cube1 behind"> </div>
+      <div class="cube2 behind"> </div>
+      <div class="cube3 behind"> </div>
 
       <div id="aboutdiv" class="tab">
         Hi! My name is Raymond Xu, and I study Computer Science at Columbia University. In my free time, I love building cool apps, learning new technologies, and practicing sleight of hand. This summer I'll be working at PayPal as a software engineering intern. Feel free to reach out to me!
