--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
       </div>
 
       <div id="projectsdiv" class="tab">
-        <div class="project"><a href="nytimes/index.html">NYTimes Decades Challenge</a></div>
-        <div class="project"><a href="arrows/index.html">Arrows</a></div>
-        <div class="project"><a href="snake/index.html">Battle Snake</a></div>
+        <a href="http://density.adicu.com"><div class="project">Density</div></a>
+        <a href="nytimes/index.html"><div class="project">NYTimes</div></a>
+        <a href="arrows/index.html"><div class="project">Arrows</div></a>
+        
       </div>
 
       <div id="contactdiv" class="tab">
