Minor refactoring changes

--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
         <a href="http://density.adicu.com"><div class="project">Density</div></a>
         <a href="nytimes/index.html"><div class="project">NYTimes</div></a>
         <a href="arrows/index.html"><div class="project">Arrows</div></a>
-        
       </div>
 
       <div id="contactdiv" class="tab">
         <div class="contact">
           <div class="github">
-            <a href="https://www.github.com/raymondxu" target="_blank"><img id="githubbutton" src="images/githubdark.png"></a>
+            <a href="https://www.github.com/raymondxu" target="_blank"><img class="mediabutton" src="images/githubdark.png"></a>
           </div>
           <div>
           <a href="mailto:mail@raymondxu.io?Subject=Hello!" target="_top"><img class="mediabutton" src="images/mail.png"></a>
