--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Raymond Xu</title>
   <link href="css/newstyle.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
 </head>
 
 <body id="page-top" class="index">
