--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body id="page-top" class="index">
-  <div id="bg" class="onevh">
+  <div class="onevh">
     <a href="index.html"><div class="title">Raymond Xu</div></a>
 
     <div class="navcontainer">
@@ -50,7 +50,7 @@
         </div>
       </div>
 
-    </div>
+    </div> <!-- End of tab container -->
 
   </div>
 </body>
